--- a/src/hhlib.vcxproj
+++ b/src/hhlib.vcxproj
@@ -150,14 +150,20 @@
     <ClCompile Include="hh\error_category.cpp" />
     <ClCompile Include="hh\error_code.cpp" />
     <ClCompile Include="hh\mutex.cpp" />
+    <ClCompile Include="hh\path.cpp" />
     <ClCompile Include="hh\string.cpp" />
+    <ClCompile Include="hh\tick_count.cpp" />
+    <ClCompile Include="hh\tribool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\hh\error_category.hpp" />
     <ClInclude Include="..\include\hh\error_code.hpp" />
     <ClInclude Include="..\include\hh\error_t.hpp" />
     <ClInclude Include="..\include\hh\mutex.hpp" />
+    <ClInclude Include="..\include\hh\path.hpp" />
     <ClInclude Include="..\include\hh\string.hpp" />
+    <ClInclude Include="..\include\hh\tick_count.hpp" />
+    <ClInclude Include="..\include\hh\tribool.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
